force-app/main/default/objects/Quote_Revenue__c/Quote_Revenue__c.object-meta.xml
<CustomObject>
    <label>Quote Revenue</label>
    <nameField>
        <displayFormat>QRN-{000000}</displayFormat>
        <label>Quote Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Revenues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>