force-app/main/default/objects/Quote_Revenue__c/fields/BillSubject__c.field-meta.xml
<CustomField>
    <fullName>BillSubject__c</fullName>
    <label>Bill Subject</label>
    <type>TextArea</type>
</CustomField>