force-app/main/default/objects/Quote_Revenue__c/fields/DocumentDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentDate__c</fullName>
    <label>Document Date</label>
    <type>Date</type>
</CustomField>