force-app/main/default/objects/Quote_Revenue__c/fields/LinksRevenue__c.field-meta.xml
<CustomField>
    <fullName>LinksRevenue__c</fullName>
    <label>Links Revenue (€)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>