force-app/main/default/objects/Quote_Revenue__c/fields/QuotaATI__c.field-meta.xml
<CustomField>
    <fullName>QuotaATI__c</fullName>
    <label>Quota ATI (€)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>