force-app/main/default/objects/Quote_Revenue__c/fields/Revenue_Type_Contributo__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type_Contributo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revenue Type Contributo</label>
    <type>Checkbox</type>
</CustomField>