force-app/main/default/objects/Quote_Revenue__c/fields/TotalRevenue__c.field-meta.xml
<CustomField>
    <fullName>TotalRevenue__c</fullName>
    <formula>QuotaATI__c +  LinksRevenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>