force-app/main/default/objects/Quote_Revenue__c/validationRules/Links_Revenue_Maggiore_di_Quota_ATI.validationRule-meta.xml
<ValidationRule>
    <fullName>Links_Revenue_Maggiore_di_Quota_ATI</fullName>
    <active>true</active>
    <errorConditionFormula>LinksRevenue__c &lt;  QuotaATI__c</errorConditionFormula>
    <errorDisplayField>LinksRevenue__c</errorDisplayField>
    <errorMessage>Links Revenue must be greater than Quota ATI</errorMessage>
</ValidationRule>